# trad_service

./: .gitignore  Cargo.toml  Dockerfile  devenv.nix  shell.nix
.deploy/: prometheus.yml  stack.yml
.github/workflows/: build-and-deploy.yml
src/: config.rs  main.rs  open_api.rs
src/subject/: mod.rs
src/translation/: mod.rs  ws.rs
