[package]
name = "trad_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["ws"] }
axum-otel-metrics = "0.8.1"
base64 = "0.22.1"
config = "0.14.1"
regex = "1.11.1"
schemars = "0.8.21"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = "5.2.0"
utoipa-axum = "0.1.2"
utoipa-scalar = { version = "0.2.0", features = ["axum"] }
